pages linking updated

--- a/form1-style.css
+++ b/form1-style.css
@@ -10,6 +10,16 @@ body{
     background-size: cover;
     background-position: center;
 }
+.back{
+    text-align: center;
+
+    margin-top: 25px;
+    
+}
+.back a{
+    text-decoration: none;
+    color: azure;
+}
 .form-container{
     width: 60%;
     margin:100px auto;
