--- a/form-style.css
+++ b/form-style.css
@@ -3,6 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+.back a{
+    text-decoration: none;
+    color:#f13737;
+   
+}
+.back{
+    text-align: center;
+}
 form{
     background: #e7dede;
     width: 50%;
