--- a/form3-style.css
+++ b/form3-style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 body{
     
@@ -11,6 +13,25 @@ body{
     justify-content: center;
     height: 100vh;
     
+}
+.back{
+    rotate: 270deg;
+}
+.form-containder h6{
+    text-align: center;
+    margin-bottom: 10px;
+}
+.form-containder h6 a{
+    text-decoration: none;
+    color:#fff;
+    font-weight: 500;
+    padding: 5px;
+    border-radius: 6px;
+    background-image: linear-gradient(45deg, #b38d97 0%, #b17686 40%, #b38d97 100%);
+}
+.form-containder a:hover{
+    color: #2a1ed1;
+    transition: 0.7s;
 }
 .form-containder{
     max-width: 680px;
@@ -28,6 +49,7 @@ body{
     text-align: center;
     margin-bottom: 10px;
     font-size: larger;
+    text-shadow: 0 1px 10px;
 
 }
 .form-content{
@@ -99,7 +121,7 @@ body{
 .form-btn button{
     width: 100%;
     padding: 12px;
-    background-image: linear-gradient(45deg, #b38d97 0%, #b17686 40%, #b38d97 100%);;
+    background-image: linear-gradient(45deg, #b38d97 0%, #b17686 40%, #b38d97 100%);
     border: none;
     border-radius: 6px;
     color: #fff;
@@ -110,7 +132,7 @@ body{
 .form-btn button:hover{
     background-image: linear-gradient( #b38d97 0%, #b17686 100%);
     box-shadow: 0 0 5px 2px#a09699;
-    
+    text-shadow: 0 1px 5px black;
     transition: 0.7s;
     
 }
